--- a/IntershipTutor/WebContent/templates/errore.ftl.html
+++ b/IntershipTutor/WebContent/templates/errore.ftl.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="body">
-        <div><a href="homepage">Ritorna alla home</a></div>
+        <div><a href=".">Ritorna alla home</a></div>
         <h1>Template Error</h1>
         </div>
     </body>
