--- a/IntershipTutor/WebContent/templates/homepage.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage.ftl.html
@@ -85,7 +85,7 @@
 					<div class="w3-padding w3-container">
 						<hr>
 						<a href="offertaTirocinio?offertaTirocinio=${offerta.idTirocinio}">
-							<h5 class="w3-opacity">
+							<h5 class="bold">
 								<#if offerta.titolo?length &lt; 150>
 									${offerta.titolo}
 								<#else>
