--- a/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
@@ -8,16 +8,26 @@
     <div class="w3-quarter">
     
       <div class="w3-card w3-round">
-        <div class="w3-container w3-padding">
-          <h2 id="nome-azienda">${azienda.nome}</h2>
+        <div class="w3-padding">
+          <h2 id="nome-azienda">
+          	${azienda.nome}
+          </h2>
           <hr />
           <p class="info">
-			<i class="fa fa-briefcase fa-fw w3-margin-right"></i>
+			<i class="fas fa-user fa-fw w3-margin-right"></i>
+			${azienda.nomeResponsabile} ${azienda.cognomeResponsabile}
+		  </p>
+          <p class="info">
+			<i class="far fa-user fa-fw w3-margin-right"></i>
 			${azienda.nomeRappresentante} ${azienda.cognomeRappresentante}
 		  </p>
           <p class="info">
-          	<i class="fa fa-home fa-fw w3-margin-right"></i>
+          	<i class="fas fa-map-marked-alt fa-fw w3-margin-right"></i>
           	${azienda.regione}
+          </p>
+          <p class="info">
+          	<i class="fas fa-map-marker-alt fa-fw w3-margin-right"></i>
+          	${azienda.indirizzoSedeLegale}
           </p>
           <p class="info">
           	<i class="fa fa-envelope fa-fw w3-margin-right"></i>
@@ -51,8 +61,13 @@
         <#list tirocini as tirocinio>
 	        <div class="w3-container azienda">
 	        <hr>
-	          <h5 class="w3-opacity">Tirocinio ${tirocinio.titolo}</h5>
-	          <h6 class=""><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag univaq-color-background w3-round">Current</span></h6>
+	          <h5 class="bold">
+		          <a href="offertaTirocinio?offertaTirocinio=${tirocinio.idTirocinio}">Tirocinio ${tirocinio.titolo}</a>
+	          </h5>
+	          <h6 class="">
+	          	<i class="fa fa-calendar fa-fw w3-margin-right"></i>
+	          	Jan 2015 - <span class="w3-tag univaq-color-background w3-round">Current</span>
+	          </h6>
 	          <p class="descrizione-tirocinio">${tirocinio.modalita}</p>
 	        </div>
         </#list>
