--- a/IntershipTutor/WebContent/style/homepage.css
+++ b/IntershipTutor/WebContent/style/homepage.css
@@ -17,8 +17,6 @@
 
 .profile-container{
     margin-bottom: 8px;
-    /* User logged */
-    display: none;
 }
 
 .azienda{
@@ -39,22 +37,22 @@
     color: #822627;
 }
 
-.aziende{
+#aziende-container{
     max-height: 500px;
     overflow-y: scroll;
     font-size: 100%;
 }
 
-.aziende::-webkit-scrollbar {
+#aziende-container::-webkit-scrollbar {
     width: 4px;
 }
 
-.aziende hr{
+#aziende-container hr{
 	margin: 10px
 }
 
  
-.aziende::-webkit-scrollbar-thumb {
+#aziende-container::-webkit-scrollbar-thumb {
   background-color: #dedede;
 }
 
@@ -63,11 +61,12 @@
 	margin: 10px 0;
 }
 
+#nome-utente,
 #aziende-convenzionate{
     margin: 0 !important;
     padding: 16px;
     font-size: 110% !important; 
-    font-weight: 700;
+    font-weight: 500;
     text-align: center;
     color: #822627;
     border-bottom: 1px solid #eeeeee;
@@ -128,10 +127,6 @@
     .offerte{
     	padding: 0 !important
     }
-    
-    .intership{
-		margin-bottom: 20px;
-	}
 
     #search-bar{
         padding: 0;
