--- a/IntershipTutor/WebContent/templates/homepage.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage.ftl.html
@@ -7,25 +7,48 @@
 	   <!-- Left Column -->
 	   <div class="w3-quarter" id="left-column">
 	       <!-- Profile -->
-	       <div class="w3-card w3-round">
-	           <div class="w3-container profile-container">
-	               <h4 class="w3-center">Stefano Martella</h4>
-	               <hr>
-	               <p>
-	                   <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i>Informatica
-	               </p>
-	               <p>
-	                   <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>L'Aquila
-	               </p>
-	               <p>
-	                   <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i>14 Giugno 1996
-	               </p>
-	           </div>
-	       </div>
+	       <#if utente??>
+		       <div class="w3-card w3-round">
+		           <div class="w3-container profile-container">
+		           	   <h2 id="nome-utente" class="w3-center univaq-color">
+			           <#if utente.tipoUtente.name() == "azienda">
+			               	${utente.nome}
+			           <#else>
+			           	   	${utente.nome} ${utente.cognome}
+			           </#if>
+			           </h2>
+			           <#if utente.tipoUtente.name() == "studente">
+				           <p>
+			                   <i class="fas fa-user-graduate fa-fw w3-margin-right w3-text-theme"></i>
+			                   ${utente.corsoLaurea}
+			               </p>
+			           </#if>
+			           <p>
+			           <#if utente.tipoUtente.name() == "studente">
+		                   <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>
+		                   ${utente.residenza}
+			           <#elseif utente.tipoUtente.name() == "azienda">
+		           			<i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>
+		                    ${utente.regione}
+		               </#if>
+		               </p>
+		               <#if utente.tipoUtente.name() == "studente">
+		               <p>
+		                   <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i>
+		                   ${utente.dataNascita}
+		               </p>
+		               <p>
+		                   <i class="fas fa-phone fa-fw w3-margin-right w3-text-theme"></i>
+		                   ${utente.telefono}
+		               </p>
+		               </#if>
+		           </div>
+		       </div>
+	       </#if>
 	
 	       <div class="w3-card w3-round">
-	           <p id="aziende-convenzionate">Aziende convenzionate</p>
-	           <div class="w3-container aziende" id="aziende-container">
+	           <h2 id="aziende-convenzionate">Aziende convenzionate</h2>
+	           <div class="w3-container" id="aziende-container">
 	               <#list aziende as azienda>
 	               	   <hr>
 	                   <div class="azienda">
@@ -62,12 +85,12 @@
 	                      <label id="label-search" for="menu">Filtra le proposte di tirocinio</label>
 	                      <div class="menu-content">
 	                          <br /><br />
-	                          <form action="">
+	                          <form action="." method="post">
 	                          <#list campiRicerca as campoRicerca>
 	                              <label class="field-filter">${campoRicerca?capitalize}</label>
-	                              <input class="w3-input" />
+	                              <input name="${campoRicerca}" class="w3-input" />
 	                          </#list>
-	                          <button class="w3-button w3-right w3-border w3-round">Cerca</button>
+	                          <button type="submit" class="w3-button w3-right w3-border w3-round">Cerca</button>
 	                          </form>
 	                      </div>
 	                 	</div>
