--- a/IntershipTutor/WebContent/style/container.css
+++ b/IntershipTutor/WebContent/style/container.css
@@ -44,6 +44,22 @@ h4{
 	margin: 0 !important;
 }
 
+.padding-left{
+	padding-left: 16px;
+}
+
+.padding-right{
+	padding-right: 16px;
+}
+
+.padding-edge{
+	padding: 0 16px;
+}
+
+.padding-top-bot{
+	padding: 5px 0;
+}
+
 .univaq-color-background{
     background-color: #822627;
     color: #ffffff
@@ -60,10 +76,10 @@ h4{
     transition: .2s all ease-in;
     opacity: .8;
 }
+
 /* End useful in different parts */
 
 /* w3 css override */
-
 .w3-button{
     outline-color: #822627;
     transition: .2s all ease-in;
@@ -143,8 +159,16 @@ input:checked ~ #label-search:after {
 /* End collapsible */
 
 /* Modals without js */
+#update-student-modal,
 #login-modal{
-	position: fixed
+	position: fixed;
+	/* Doesn't work on edge and firefox, find a workaround or keep the ugly effect */
+	overflow-y: scroll;
+}
+
+#update-student-modal::-webkit-scrollbar,
+#login-modal::-webkit-scrollbar { 
+    display: none; 
 }
 
 .overlay {
@@ -165,8 +189,7 @@ input:checked ~ #label-search:after {
 }
 
 .popup {
-	margin: auto;
-	margin-top: 8%;
+	margin: 40px auto;
 	max-width: 600px;
 	position: relative;
 }
@@ -174,8 +197,7 @@ input:checked ~ #label-search:after {
 
 /* My classes */
 .info{
-    font-size: 15px;
-    margin: 13px 0
+    font-size: 14px;
 }
 
 .pointer{
@@ -201,8 +223,7 @@ a{
 
 /* Computer */
 @media (min-device-width: 500px){
-    html,
-    .w3-bar{
+    html{
         min-width: 500px !important;
     }
     
