--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -24,10 +24,17 @@
 	        <i class="fa fa-home w3-margin-right univaq-color-background pointer"></i>
 	        IntershipTutor
 	    </a>
-	    <a href="#login-modal" class="w3-bar-item w3-right no-padding pointer">
-	        Accedi
-	        <i class="fa fa-user w3-margin-left univaq-color-background"></i>
-	    </a>
+	    <#if utente??>
+		    <a href="logout" class="w3-bar-item w3-right no-padding pointer">
+		        Esci
+		        <i class="fas fa-sign-out-alt w3-margin-left univaq-color-background"></i>
+		    </a>
+	    <#else>
+	    	<a href="#login-modal" class="w3-bar-item w3-right no-padding pointer">
+		        Accedi
+		        <i class="fas fa-sign-in-alt w3-margin-left univaq-color-background"></i>
+		    </a>
+	    </#if>
 	</div>
 	
 	
@@ -40,7 +47,11 @@
 	            <label for="menu-1"><i class="fa fa-bars w3-right univaq-color-background"></i></label>
 	        <div class="menu-content-1">
 	            <ul>
-	                <li><a href="#login-modal" class="w3-bar-item">Accedi</a></li>
+	            	<#if utente??>
+	            		<li><a href="logout" class="w3-bar-item">Esci</a></li>
+	            	<#else>
+	            		<li><a href="#login-modal" class="w3-bar-item">Accedi</a></li>
+	            	</#if>
 	                <li><a href="./aziende-smartphone.html" class="w3-bar-item">Aziende convenzionate</a></li>
 	            </ul>                    
 	        </div>
@@ -60,8 +71,10 @@
     </footer>
     
     <!-- Modals -->
+    
+	<!-- Login modal form -->
     <div id="login-modal" class="overlay">
-	    <div class="w3-card w3-white w3-round popup">
+	    <div class="w3-card w3-white w3-round popup w3-padding">
 	
 	      <div class="w3-center"><br>
 	      	<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
@@ -83,6 +96,34 @@
 	      </div>
 	      </div>
       </div>
+      
+      <!-- Update student profile modal -->
+      <div id="update-student-modal" class="overlay">
+	    <div class="w3-card w3-white w3-round popup w3-padding">
+	
+	      <div class="w3-center"><br>
+	      	<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
+	        <h2>Modifica informazioni</h2>
+	      </div>
+		      <form class="w3-container" action="./studente" method="post">
+		        <div class="w3-section">
+		          <label for="nome"><b>Nome</b></label>
+		          <input class="w3-input w3-border-bottom w3-margin-bottom" type="text" value="${utente.nome}" placeholder="Inserisci il tuo nome" name="nome" required>
+		          <label for="cognome"><b>Cognome</b></label>
+		          <input class="w3-input w3-border-bottom w3-margin-bottom" type="text" value="${utente.cognome}" placeholder="Inserisci il tuo cognome" name="cognome" required>
+		          <label for="password"><b>Email</b></label>
+	         	  <input class="w3-input w3-border-bottom w3-margin-bottom" type="text" value="${utente.email}" placeholder="Inserisci la tua email" name="email" required>
+		          <label for="telefono"><b>Telefono</b></label>
+	          	  <input class="w3-input w3-border-bottom w3-margin-bottom" type="text" value="${utente.telefono}" placeholder="Inserisci il tuo telefono" name="telefono" required>
+		          <label for="password"><b>Password</b></label>
+	          	  <input class="w3-input w3-border-bottom w3-margin-bottom" type="password" value="${utente.password}" placeholder="Inserisci la password" name="password" required>
+	          	  <button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit">Modifica</button>
+		        </div>
+		      </form>
+	      </div>
+      </div>
+    
+    <!-- End modals -->
     
     <!-- Scripts -->
     <script src="js/jquery-3.3.1.min.js" ></script>
