--- a/IntershipTutor/WebContent/templates/homepage.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage.ftl.html
@@ -9,39 +9,70 @@
 	       <!-- Profile -->
 	       <#if utente??>
 		       <div class="w3-card w3-round">
-		           <div class="w3-container profile-container">
-		           	   <h2 id="nome-utente" class="w3-center univaq-color">
-			           <#if utente.tipoUtente.name() == "azienda">
-			               	${utente.nome}
-			           <#else>
-			           	   	${utente.nome} ${utente.cognome}
-			           </#if>
-			           </h2>
-			           <#if utente.tipoUtente.name() == "studente">
-				           <p>
+		           <div class="w3-container profile-container w3-margin-bottom">
+		           	   
+		           	   <!-- Logged user is a student -->
+		           	   <#if utente.tipoUtente.name() == "studente">
+		           	   		<h2 id="nome-utente" class="w3-center univaq-color">${utente.nome} ${utente.cognome}</h2>
+		           	   		<p class="info padding-top-bot">
 			                   <i class="fas fa-user-graduate fa-fw w3-margin-right w3-text-theme"></i>
 			                   ${utente.corsoLaurea}
-			               </p>
-			           </#if>
-			           <p>
-			           <#if utente.tipoUtente.name() == "studente">
-		                   <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>
-		                   ${utente.residenza}
-			           <#elseif utente.tipoUtente.name() == "azienda">
-		           			<i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>
-		                    ${utente.regione}
-		               </#if>
-		               </p>
-		               <#if utente.tipoUtente.name() == "studente">
-		               <p>
-		                   <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i>
-		                   ${utente.dataNascita}
-		               </p>
-		               <p>
-		                   <i class="fas fa-phone fa-fw w3-margin-right w3-text-theme"></i>
-		                   ${utente.telefono}
-		               </p>
-		               </#if>
+			                </p>
+			                <p class="info padding-top-bot">
+				               <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>
+			                   ${utente.residenza}
+			                </p>
+			                <p class="info padding-top-bot">
+			                   <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i>
+			                   ${utente.dataNascita}
+			                </p>
+			                <p class="info padding-top-bot">
+			                   <i class="fas fa-phone fa-fw w3-margin-right w3-text-theme"></i>
+			                   ${utente.telefono}
+			                </p>
+			                <hr class="no-margin" />
+			                <p class="info padding-top-bot pointer">
+			                	<a href="#update-student-modal">
+				                   <i class="far fa-edit fa-fw w3-margin-right w3-text-theme"></i>
+				                   Modifica Profilo
+			                   </a>
+			                </p>
+			                
+					   <!-- Logged user is a company owner -->
+		           	   <#elseif utente.tipoUtente.name() == "azienda">
+		           	   		<h2 id="nome-utente" class="w3-center univaq-color">${utente.nome} </h2>
+		           	   		<p class="info padding-top-bot">
+				               <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>
+		                       ${utente.regione}
+			                </p>
+			                <p class="info padding-top-bot">
+			                   <i class="fas fa-phone fa-fw w3-margin-right w3-text-theme"></i>
+			                   ${utente.telefono}
+			                </p>
+			                <hr class="no-margin" />
+			                <p class="info padding-top-bot pointer">
+			                   <i class="fas fa-list-ul fa-fw w3-margin-right w3-text-theme"></i>
+			                   Tirocini pubblicati
+			                </p>
+			                <p class="info padding-top-bot pointer">
+			                   <i class="fas fa-plus fa-fw w3-margin-right w3-text-theme"></i>
+			                   Aggiungi tirocinio
+			                </p>
+			                <p class="info padding-top-bot pointer">
+			                   <i class="far fa-edit fa-fw w3-margin-right w3-text-theme"></i>
+			                   Modifica Profilo
+			                </p>
+			                
+			           <!-- Logged user is an admin -->
+		           	   <!-- utente.tipoUtente.name() == "amministratore -->
+		           	   <#else>
+		           	   		<h2 id="nome-utente" class="w3-center univaq-color">${utente.nome} ${utente.cognome}</h2>
+		           	   		<p class="info padding-top-bot pointer">
+			                   <i class="fas fa-building fa-fw w3-margin-right w3-text-theme"></i>
+			                   Aziende in attesa
+			                </p>
+		           	   </#if>
+		               
 		           </div>
 		       </div>
 	       </#if>
@@ -53,7 +84,7 @@
 	               	   <hr>
 	                   <div class="azienda">
 	                    <a href="azienda?azienda=${azienda.codiceFiscale}">
-	                        <h4>
+	                        <h4 class="info">
 	                        	<i class="far fa-building fa-fw w3-margin-right"></i> 
 	                        	${azienda.nome}
 	                        </h4>
@@ -78,19 +109,19 @@
 	   <div class="w3-threequarter" id="right-column">
 	
 	         <div id="search-bar">
-	             <div class="w3-card w3-round">
+	             <div class="w3-card w3-round padding-edge">
 	                 <div class="w3-container intership">
 	                     <div class="search-form collapsible-menu">
 	                      <input type="checkbox" id="menu" />
 	                      <label id="label-search" for="menu">Filtra le proposte di tirocinio</label>
 	                      <div class="menu-content">
 	                          <br /><br />
-	                          <form action="." method="post">
-	                          <#list campiRicerca as campoRicerca>
-	                              <label class="field-filter">${campoRicerca?capitalize}</label>
-	                              <input name="${campoRicerca}" class="w3-input" />
-	                          </#list>
-	                          <button type="submit" class="w3-button w3-right w3-border w3-round">Cerca</button>
+	                          <form action="." method="get">
+		                          <#list campiRicerca as campoRicerca>
+		                              <label class="field-filter">${campoRicerca?capitalize}</label>
+		                              <input name="${campoRicerca}" class="w3-input" />
+		                          </#list>
+		                          <button type="submit" class="w3-button w3-right w3-border w3-round">Cerca</button>
 	                          </form>
 	                      </div>
 	                 	</div>
@@ -139,15 +170,91 @@
 	       <!-- Pagination -->
 	       <div class="w3-center">
 	           <div id="pagination" class="w3-bar w3-border">
-	               <a href="#" class="w3-button w3-hover-univaq-color-background">&laquo;</a>
-	               <a href="#" class="w3-button w3-hover-univaq-color-background">1</a>
-	               <a href="#" class="w3-button w3-hover-univaq-color-background">2</a>
-	               <a href="#" class="w3-button w3-hover-univaq-color-background">3</a>
-	               <a href="#" class="w3-button w3-hover-univaq-color-background">4</a>
-	               <a href="#" class="w3-button w3-hover-univaq-color-background">5</a>
-	               <a href="#" class="w3-button w3-hover-univaq-color-background">&raquo;</a>
+	           		
+	           		<!-- back button only present if at least 2 pages are present -->
+	           		<#if (paginaCorrente + 1) gt 1>
+	           			<a href="?pagina=${(paginaCorrente - 1) + queryString}" class="padding-edge w3-a w3-hover-univaq-color-background">
+	           				&laquo;
+	           			</a>
+	           		</#if>
+	           		
+	           		<!-- Limit view if number of pages is greater than 5 -->
+	           		<#if numeroPagine gt 5>	           			
+	           				<a href="?pagina=0${queryString}" 
+	           				   class="w3-button 
+	           				   <#if (paginaCorrente + 1) == 1> 
+	           				   		univaq-color-background 
+	           				   <#else>
+	           				   		w3-hover-univaq-color-background
+	           				   </#if>">
+	           					1
+	           				</a>
+	           				<#if (paginaCorrente + 1) gt 3>...</#if>
+	           				
+	           				<#if paginaCorrente - 1 gt 0>
+	           					<a href="?pagina=${paginaCorrente - 1 + queryString}" class="w3-button w3-hover-univaq-color-background">
+									${paginaCorrente}
+								</a>
+	           				</#if>
+	           				
+	           				<#if (paginaCorrente) != 0 && paginaCorrente != numeroPagine - 1>
+	           					<a href="?pagina=${paginaCorrente + queryString}" class="w3-button univaq-color-background">
+			           				${paginaCorrente + 1}
+			           			</a>
+	           				</#if>
+	           				
+	           				<#if paginaCorrente + 1 lt numeroPagine - 1>
+	           					<a href="?pagina=${paginaCorrente + 1 + queryString}" class="w3-button w3-hover-univaq-color-background">
+									${paginaCorrente + 2}
+								</a>
+	           				</#if>
+	           				
+	           				<#if numeroPagine gt (paginaCorrente + 3)>...</#if>
+	           				
+	           				<a href="?pagina=${(numeroPagine - 1) + queryString}" 
+	           				   class="w3-button 
+	           				   <#if (paginaCorrente + 1) == numeroPagine > 
+	           				   		univaq-color-background 
+	           				   <#else>
+	           				   		w3-hover-univaq-color-background
+	           				   </#if>">
+	           					${numeroPagine}
+	           				</a>
+	           			
+	           		<!-- Show all pages number if number of pages is less than 5 -->
+	           		<#else>
+	           	
+	           			<#if numeroPagine gt 0>
+	           			<#assign pagine = (numeroPagine - 1)>
+	           			<#else>
+	           			<#assign pagine = 0>
+	           			</#if>
+						<#list 0..pagine as pagina>
+							<#if paginaCorrente == pagina>
+								<a href="?pagina=${pagina + queryString}"
+							       class="w3-button univaq-color-background">
+									${pagina + 1}
+								</a>
+							<#else>
+								<a href="?pagina=${pagina + queryString}"
+							       class="w3-button w3-hover-univaq-color-background">
+									${pagina + 1}
+								</a>
+							</#if>
+						</#list>
+					
+					</#if>
+					
+					<!-- forward button only present if current page is less then number of pages -->
+					<#if (paginaCorrente + 1) lt numeroPagine>
+	           			<a href="?pagina=${(paginaCorrente + 1) + queryString}" class="padding-edge w3-a w3-hover-univaq-color-background">
+	           				&raquo;
+	           			</a>
+	           		</#if>
+	           		
 	           </div>
 	       </div>
+	       <!-- End pagination -->
 	
 	   </div>
    
