--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -77,29 +77,31 @@
     <!-- Modals -->
     
 	<!-- Login modal form -->
-    <div id="login-modal" class="overlay">
-	    <div class="w3-card w3-white w3-round popup w3-padding">
-	
-	      <div class="w3-center"><br>
-	      	<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
-	        <h2>Effettua il login</h2>
+	<#if !utente??>
+	    <div id="login-modal" class="overlay">
+		    <div class="w3-card w3-white w3-round popup w3-padding">
+		
+		      <div class="w3-center"><br>
+		      	<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
+		        <h2>Effettua il login</h2>
+		      </div>
+		      <form class="w3-container" action="login" method="post">
+		        <div class="w3-section">
+		          <label><b>Username</b></label>
+		          <input class="w3-input w3-border-bottom w3-margin-bottom" type="text" placeholder="Inserisci il tuo username" name="username" required>
+		          <label><b>Password</b></label>
+		          <input class="w3-input w3-border-bottom w3-margin-bottom" type="password" placeholder="Inserisci la tua password" name="password" required>
+		          <button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit" name="login" value="login">Login</button>
+		        </div>
+		      </form>
+		      
+		      <div class="w3-container w3-border-top w3-padding w3-round-bottom">
+		        <span class="w3-left w3-padding-large pointer">Registrati</span>
+		        <span class="w3-right w3-padding-large pointer">Password dimenticata?</span>
+		      </div>
+		      </div>
 	      </div>
-	      <form class="w3-container" action="login" method="post">
-	        <div class="w3-section">
-	          <label><b>Username</b></label>
-	          <input class="w3-input w3-border-bottom w3-margin-bottom" type="text" placeholder="Inserisci il tuo username" name="username" required>
-	          <label><b>Password</b></label>
-	          <input class="w3-input w3-border-bottom w3-margin-bottom" type="password" placeholder="Inserisci la tua password" name="password" required>
-	          <button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit" name="login" value="login">Login</button>
-	        </div>
-	      </form>
-	      
-	      <div class="w3-container w3-border-top w3-padding w3-round-bottom">
-	        <span class="w3-left w3-padding-large pointer">Registrati</span>
-	        <span class="w3-right w3-padding-large pointer">Password dimenticata?</span>
-	      </div>
-	      </div>
-      </div>
+      </#if>
     
     <!-- End modals -->
     
