--- a/IntershipTutor/WebContent/templates/gestore-azienda.ftl.html
+++ b/IntershipTutor/WebContent/templates/gestore-azienda.ftl.html
@@ -74,10 +74,11 @@
 	          <h5 class="bold">
 		          <a href="offertaTirocinio?offertaTirocinio=${tirocinio.idTirocinio}">Tirocinio ${tirocinio.titolo}</a>
 	          </h5>
-	          <h6 class="">
-	          	<i class="fa fa-calendar fa-fw w3-margin-right"></i>
-	          	Jan 2015 - <span class="w3-tag univaq-color-background w3-round">Current</span>
-	          </h6>
+	          <p class="info">
+	          	<i class="far fa-calendar-alt fa-fw w3-margin-right"></i>
+	          	da ${tirocinio.dataInizio?iso_local} al ${tirocinio.dataFine?iso_local}
+	          	<span class="w3-tag univaq-color-background w3-round">Current</span>
+	          </p>
 	          <p class="descrizione-tirocinio">${tirocinio.modalita}</p>
 	        </div>
         </#list>
